--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <title>The New Angular2 Framework</title>
 
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="node_modules/prismjs/themes/prism.css" />
     <link rel="stylesheet" href="css/styles.css">
-
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-
-    <script src="systemjs.config.js"></script>
-    <script>
-        System.import('app').catch(function(err){ console.error(err); });
-    </script>
 
 </head>
 <body>
+
 <my-app>Loading...</my-app>
+
+<script src="node_modules/core-js/client/shim.min.js"></script>
+<script src="node_modules/zone.js/dist/zone.js"></script>
+<script src="node_modules/reflect-metadata/Reflect.js"></script>
+<script src="node_modules/systemjs/dist/system.src.js"></script>
+<script src="node_modules/prismjs/prism.js"></script>
+
+<script src="systemjs.config.js"></script>
+<script>
+    System.import('app').catch(function(err){ console.error(err); });
+</script>
+
 </body>
 </html>
