--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="node_modules/reflect-metadata/Reflect.js"></script>
 <script src="node_modules/systemjs/dist/system.src.js"></script>
 <script src="node_modules/prismjs/prism.js"></script>
+<script src="node_modules/prismjs/components/prism-typescript.js"></script>
 
 <script src="systemjs.config.js"></script>
 <script>
